2015-09-11  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  integria_demo.sql
	  include/functions_db.php
	  operation/companies/company_detail.php
	  operation/contracts/contract_detail.php
	  operation/invoices/invoice_template.php
	  operation/invoices/invoice_view.php
	  operation/invoices/invoices.php: Now you can apply
	discounts to invoices.

	* extras/mr/33.sql: Added file.

2015-09-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql
	  integria_demo.sql: Updated current package.

	* include/functions_update_manager.php
	  godmode/setup/update_manager.php Fixed error updating 
	to the last version.

2015-09-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/api.php
	  include/functions_api.php: Added 'add_address_to_newsletter'
	to API.

2015-09-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  integria_demo.sql
	  extras/mr/32.sql: Modify 'tnewsletter_content'.

	* include/functions_update_manager.php: Fixed
	bug updating packages.

2015-09-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/languages/es.mo
	  include/languages/es.po
	  include/languages/index.pot: Upadate 
	translations. 

2015-09-28  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_detail.php: Fixed
	bug creating incidents with option 'Allow to change
	user creator and user owner' selected. 

2015-09-28  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/mr/32.sql
	  include/config_process.php
	  include/functions.php
	  include/functions_html.php: Fixed error
	displaying images when option 'Enable https access'
	is selected.
	  
	* include/functions_inventories.php
	  operation/incidents/incident_detail.php: Added inventory
	info to show.

2015-09-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/inventories.php
	  include/js/integria_inventory.js
	  integria_db.sql
	  integria_dbdata.sql
	  integria_demo.sql