@@ -500,7 +500,7 @@ CREATE TABLE `tinvoice` (
   `bill_id_variable` int(6) unsigned NOT NULL default 0,
   `contract_number` varchar(100) NOT NULL default '',
   `discount_before` float(11,2) NOT NULL DEFAULT '0.0',
-  `discount_after` float(11,2) NOT NULL DEFAULT '0.0',
+  `discount_concept` varchar(100) NOT NULL default '',
   `tax_name` varchar(100) NOT NULL default '',
   PRIMARY KEY  (`id`),
   KEY `tcost_idx_1` (`id_user`),
