@@ -1,3 +1,13 @@
+2015-09-12  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* integria_db.sql
+	  include/functions_db.php
+	  operation/invoices/invoice_template.php
+	  operation/invoices/invoice_view.php
+	  operation/invoices/invoices.php
+	  extras/mr/33.sql: Deleted 'discounts
+	after taxes' from invoices.
+
 2015-09-11  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* integria_db.sql
